<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="yields.client.activities.SelectUsernameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewUserNameSelection"
        android:id="@+id/textViewCreateAccount"
        android:layout_marginTop="72dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextCreateAccount"
        android:layout_below="@+id/textViewCreateAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:hint="@string/editTextUsernameHint"
        android:maxLength="80"
        android:maxLines="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCreateAccount"
        android:id="@+id/buttonCreateAccount"
        android:layout_below="@+id/editTextCreateAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:onClick="createAccount" />
</RelativeLayout>
